# Exercise

./: .gitignore  README.md
exercise1/cpp/: h2o.xyz  main.cpp  molecular.cpp  molecular.h  water.xyz
exercise1/python/: molecular.py
exercise2/cpp/: CMakeLists.txt  main.cpp  timer.hpp
exercise2/exercise2-answer/: task1_main.cpp  task1_timer.hpp  task2_multi.cpp  task2_multi.py  task2_timer.hpp
exercise2/python/: matrix_mul.py
exercise3/cpp/: CMakeLists.txt  main.cpp  matrix.hpp
exercise3/python/: huckel.py
exercise7/python/: rhf.py
python/: molecular.py
